@@ -1,4 +1,5 @@
 current:
+  * fix zbarimg b&w format handling
   * fix scan (image) boundary QZ handling (bug #2807538)
     - add linear scanner manual flush API
     - linear scanner always starts/ends w/a space of width 0
